--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Projects overview</title>
+		<title>Projects to improve Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
@@ -72,7 +72,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 <p>To ensure Canada.ca content is improving with each project, we co-create prototypes, set concrete usability targets, and run usability tests with Canadians to see if the prototypes result in an improvement or not. </p>
 
-<p>For a prototype to launch, it has to show that it is at least 20% easier for Canadians to accomplish the task of getting the right answers to questions they are likely to have about specific <abbr title="Government of Canada">GC</abbr> services. </p>
+<p>For a prototype to launch, it has to show that it is at least 20% easier for Canadians to accomplish the task of getting the right answers to questions they are likely to have about specific Government of Canada services. </p>
 
 <p>Considering the high numbers of page visits to some the Government of Canada’s Top Tasks, such an increase in task success rates is significant. Ultimately it means people spending less time looking for the answers they need from the Government of Canada.</p>
 
@@ -114,7 +114,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 						<h4>Why this work matters</h4>
-				
+
 						<ul>
 				<li class="custli">Approximately 40,000 new small and medium enterprises start up each year</li>
 				</ul>
@@ -139,11 +139,11 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 						<div>
 
 						<ul class="custul">
-						<li class="custli">Imagine you are going to start a home business in Winnipeg, part-time as a consultant. Find out what you can find out about any essential legal steps in that process</li>
-						<li class="custli">You want to name your new business ‘SOMOS’. Check if it is legal or illegal for you to start using that name</li>
-						<li class="custli">You expect to earn about $1,000 a month from your new business for the first six months. Find out whether you must charge GST to your customers</li>
-						<li class="custli">Your first employee starts work next month. Find out if there is an official step you must take before or very soon after you cut their first paycheque</li>
-						<li class="custli">Your business needs to start collecting GST. Find the official first step you must take</li>
+						<li class="custli">Imagine you are going to start a home business in Winnipeg, part-time as a consultant. Find out what you can find out about any essential legal steps in that process.</li>
+						<li class="custli">You want to name your new business ‘SOMOS’. Check if it is legal or illegal for you to start using that name.</li>
+						<li class="custli">You expect to earn about $1,000 a month from your new business for the first six months. Find out whether you must charge <abbr title="Goods and Services Tax">GST</abbr> to your customers.</li>
+						<li class="custli">Your first employee starts work next month. Find out if there is an official step you must take before or very soon after you cut their first paycheque.</li>
+						<li class="custli">Your business needs to start collecting <abbr title="Goods and Services Tax">GST</abbr>. Find the official first step you must take.</li>
 						<li class="custli">You have decided to incorporate your business. Is it possible to submit the application form online, and if so, how much it will cost?</li>
 						</ul>
 
@@ -168,7 +168,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 			<h4>Why this work matters</h4>
-		
+
 			<ul>
 			<li class="custli"><abbr title="Immigration, Refugees and Citizenship Canada">IRCC</abbr> processes about 1,000,000 Visa applications a year</li>
 			<li class="custli"><abbr title="Immigration, Refugees and Citizenship Canada">IRCC</abbr> expects 3,200,000 Electronic Travel Authorization applications this year</li>
@@ -195,11 +195,11 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 												<div>
 
 												<ul class="custul">
-												<li class="custli">Find out what I need to come to Canada as a tourist from my country</li>
-												<li class="custli">Find out what I need to come to Canada as a Canadian permanent resident</li>
-												<li class="custli">Find out what I need to come to Canada as a former Canadian permanent resident</li>
-												<li class="custli">Find out what I need to come to Canada as a Canadian dual citizen</li>
-												<li class="custli">Find out what I need to come to Canada from the USA with an American passport</li>
+												<li class="custli">Find out what I need to come to Canada as a tourist from my country.</li>
+												<li class="custli">Find out what I need to come to Canada as a Canadian permanent resident.</li>
+												<li class="custli">Find out what I need to come to Canada as a former Canadian permanent resident.</li>
+												<li class="custli">Find out what I need to come to Canada as a Canadian dual citizen.</li>
+												<li class="custli">Find out what I need to come to Canada from the USA with an American passport.</li>
 												<li class="custli">Find out what I need to transit through a Canadian airport coming from China?</li>
 												</ul>
 
@@ -224,19 +224,19 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 	<p>Environment and Climate Change Canada</p>
 
-	
+
 	<h4>Objective</h4>
 
 			<p>Make it easier for Canadians to understand notifications about dangerous weather conditions.</p>
 
 
 			<h4>Why this work matters</h4>
-		
+
 			<ul>
-			<li class="custli">Canadians check the weather with the <abbr title="Government of Canada">GC</abbr> more than they do anything else</li>
+			<li class="custli">Canadians check the weather with the Government of Canada more than they do anything else</li>
 			<li class="custli">More than 550,000,000 visits to weather.gc.ca annually</li>
 			</ul>
-		
+
 <br>
 
 		<div class="table-bravo">
@@ -266,7 +266,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 														<li class="custli">It's Sunday morning, and you need to drive to Kingston for a Monday noon meeting. Should you leave this evening, or tomorrow morning?</li>
 														<li class="custli">Hail would rip holes in your expensive tent. Should you rush to pack up your camp site this morning or take your time this evening?</li>
 														<li class="custli">You want to take the the dog for a short walk before it rains. It is already raining anywhere in the Ottawa area yet (yes/no)?</li>
-														<li class="custli">You are the golf course manager - the sky looks dark. Find out (yes/no) whether you should clear the course because of the potential of lightning in the next 10-20 minutes</li>
+														<li class="custli">You are the golf course manager: the sky looks dark. Find out (yes/no) whether you should clear the course because of the potential of lightning in the next 10-20 minutes.</li>
 														</ul>
 
 																		<br>
@@ -304,7 +304,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 			<h4>Why this work matters</h4>
-	
+
 			<ul>
 			<li class="custli">Flu cases result in nearly 12,000 hospitalizations in Canada each year</li>
 			<li class="custli">Only 50% of users could find and complete certain tasks related to this task</li>
@@ -367,13 +367,13 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 			<h4>Objective</h4>
 
-			<p>Make it easier for businesses to fulfill their GST/HST and payroll requirements.</p>
+			<p>Make it easier for businesses to fulfill their <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> and payroll requirements.</p>
 
 
 			<h4>Why this work matters</h4>
-		
+
 			<ul>
-			<li class="custli">There are 5,400,000 active GST/HST accounts in Canada and 1,700,000 active Payroll accounts in Canada</li>
+			<li class="custli">There are 5,400,000 active <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr> accounts in Canada and 1,700,000 active Payroll accounts in Canada</li>
 			</ul>
 			<br>
 
@@ -397,13 +397,13 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 																						<div>
 
 																	<ul class="custul">
-																	<li class="custli">Can you pay your company's payroll CPP and EI deductions to CRA using Interac?</li>
-																	<li class="custli">You issued an invoice, with GST included, on the last day of the quarter. Can you wait until the invoice is paid before sending in your payment?</li>
-																	<li class="custli">You accidentally made an error when you submitted your last payroll return. You under-paid your source deductions to CRA by $350. Will you get fined?</li>
-																	<li class="custli">If your Ontario company sells and ships a taxable product to a customer in Alberta, do you charge them GST or HST?</li>
-																	<li class="custli">You mailed a cheque to pay your company’s payroll deductions. How would you confirm that the CRA received it?</li>
-																	<li class="custli">You registered for GST for the first time on August 31, and will file your return annually. Your fiscal year ended October 31. Your net tax for September and October was $2,500. Will you need to pay your GST in instalments for the next fiscal year?</li>
-																	<li class="custli">Your business operates seasonally, so you don't pay employees during the winter. Do you need to let CRA know this?</li>
+																	<li class="custli">Can you pay your company's payroll <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Employment Insurance">EI</abbr> deductions to <abbr title="Canada Revenue Agency"> CRA</abbr> using Interac?</li>
+																	<li class="custli">You issued an invoice, with <abbr title="Goods and Services Tax">GST</abbr> included, on the last day of the quarter. Can you wait until the invoice is paid before sending in your payment?</li>
+																	<li class="custli">You accidentally made an error when you submitted your last payroll return. You under-paid your source deductions to <abbr title="Canada Revenue Agency"> CRA</abbr> by $350. Will you get fined?</li>
+																	<li class="custli">If your Ontario company sells and ships a taxable product to a customer in Alberta, do you charge them <abbr title="Goods and Services Tax">GST</abbr> or <abbr title="Harmonized Sales Tax">HST</abbr></li>
+																	<li class="custli">You mailed a cheque to pay your company’s payroll deductions. How would you confirm that the <abbr title="Canada Revenue Agency">CRA</abbr> received it?</li>
+																	<li class="custli">You registered for <abbr title="Goods and Services Tax">GST</abbr> for the first time on August 31, and will file your return annually. Your fiscal year ended October 31. Your net tax for September and October was $2,500. Will you need to pay your <abbr title="Goods and Services Tax">GST</abbr> in instalments for the next fiscal year?</li>
+																	<li class="custli">Your business operates seasonally, so you don't pay employees during the winter. Do you need to let <abbr title="Canada Revenue Agency"> CRA</abbr> know this?</li>
 																						</ul>
 
 																						<br>
@@ -430,7 +430,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 			<h4>Why this work matters</h4>
-		
+
 			<ul>
 			<li class="custli">Thousands of Canadians receive the family caregiver and compassionate care benefits each year</li>
 			<li class="custli">Only 52% of users could find and complete certain tasks related to this task</li>
@@ -456,7 +456,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 																												<div>
 
 																		<ul class="custul">
-																				<li class="custli">Darren has been working full-time and making EI contributions for 5 months. Is that enough for him to qualify for government support to take time off work to look after his sick 8-year-old son?</li>
+																				<li class="custli">Darren has been working full-time and making <abbr title="Employment Insurance">EI</abbr> contributions for 5 months. Is that enough for him to qualify for government support to take time off work to look after his sick 8-year-old son?</li>
 																				<li class="custli">What information would Chen need from his employer to support an application to take time off from work to look after his sick wife?</li>
 																				<li class="custli">Tara has applied for government support to take time off work to look after her sick 12-year-old daughter. When will she receive her first payment?</li>
 																				<li class="custli">Could you show me how you would apply for government help to take time off work to look after a sick parent?</li>
