--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Projects to improve Canada.ca</title>
+		<title>Improving Content on Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
@@ -63,7 +63,7 @@
 
 <main role="main" property="mainContentOfPage" class="container">
 
-<h1>Projects to improve Canada.ca</h1>
+<h1>Improving Content on Canada.ca</h1>
 
 	<p>Small changes make a big difference.</p>
 
@@ -307,7 +307,6 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 			<ul>
 			<li class="custli">Flu cases result in nearly 12,000 hospitalizations in Canada each year</li>
-			<li class="custli">Only 50% of users could find and complete certain tasks related to this task</li>
 			</ul>
 		<br>
 
@@ -433,7 +432,6 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 			<ul>
 			<li class="custli">Thousands of Canadians receive the family caregiver and compassionate care benefits each year</li>
-			<li class="custli">Only 52% of users could find and complete certain tasks related to this task</li>
 			</ul>
 			<br>
 
