--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -63,7 +63,7 @@
 
 <main role="main" property="mainContentOfPage" class="container">
 
-<h1>Improving Content on Canada.ca</h1>
+<h1>Improving content on Canada.ca</h1>
 
 	<p>Small changes make a big difference.</p>
 
