--- a/pages/pullquotetest.html
+++ b/pages/pullquotetest.html
@@ -109,7 +109,6 @@ color: #3095B5 !important;
 .quotesig {
 
 	font-size: 14px;
-	
 }
 </style>
 
@@ -190,6 +189,8 @@ color: #3095B5 !important;
   </div>
 
   <hr />
+  
+  <h2 id="learn-more-about-this-project">About the author</h2>
   
   <p><b>The Honourable Scott Brison is the President of the Treasury Board.</b></p>
 
