--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -101,7 +101,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 	<details >
-											<summary class="borderless">  <h3 class="timeline-title">Optimizing business start-up activities</h3> <div class="summary-custom"><div></summary>
+											<summary class="borderless">  <h3 class="timeline-title">Business start-up activities</h3> <div class="summary-custom"><div></summary>
 
 						<h4>Partner departments</h4>
 
@@ -156,7 +156,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 							</details>
 
 <details>
-						<summary class="borderless">  <h3 class="timeline-title">Optimizing Electronic Travel Authorizations (ETA)</h3> <div class="summary-custom"><div></summary>
+						<summary class="borderless">  <h3 class="timeline-title">Electronic Travel Authorizations (ETA)</h3> <div class="summary-custom"><div></summary>
 
 			<h4>Partner department</h4>
 
@@ -217,7 +217,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 <details>
-					<summary class="borderless">  <h3 class="timeline-title">Optimizing weather information</h3><div class="summary-custom"><div></summary>
+					<summary class="borderless">  <h3 class="timeline-title">Weather information</h3><div class="summary-custom"><div></summary>
 
 
 	<h4>Partner department</h4>
@@ -292,7 +292,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 <details >
-					<summary class="borderless">  <h3 class="timeline-title">Optimizing vaccination and immunization information</h3> <div class="summary-custom"><div></summary>
+					<summary class="borderless">  <h3 class="timeline-title">Vaccination and immunization information</h3> <div class="summary-custom"><div></summary>
 
 			<h4>Partner departments</h4>
 
@@ -358,7 +358,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 <details >
-								<summary class="borderless">  <h3 class="timeline-title">Optimizing GST/HST and payroll</h3> <div class="summary-custom"><div></summary>
+								<summary class="borderless">  <h3 class="timeline-title">GST/HST and payroll</h3> <div class="summary-custom"><div></summary>
 
 						<h4>Partner department</h4>
 
@@ -417,7 +417,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 <details >
-								<summary class="borderless">  <h3 class="timeline-title">Optimizing EI special benefits </h3> <div class="summary-custom"><div></summary>
+								<summary class="borderless">  <h3 class="timeline-title">EI special benefits </h3> <div class="summary-custom"><div></summary>
 
 									<h4>Partner department</h4>
 
@@ -475,7 +475,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 							<div class="details-custom soon" >
-                      <div class="borderless">  <h3 class="timeline-title-soon">Optimizing recalls and safety alerts (in progress)</h3> <div></div>
+                      <div class="borderless">  <h3 class="timeline-title-soon">Recalls and safety alerts (in progress)</h3> <div></div>
 
 							</div>
 
@@ -483,7 +483,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 								<div class="details-custom soon" >
-												<div class="borderless">  <h3 class="timeline-title-soon">Optimizing business account maintenance (in progress)</h3> <div></div>
+												<div class="borderless">  <h3 class="timeline-title-soon">Business account maintenance (in progress)</h3> <div></div>
 
 								</div>
 
