--- a/pages/apercu-projet.html
+++ b/pages/apercu-projet.html
@@ -126,17 +126,17 @@
 						</tr></tbody></table>
 
 
-					<h4 style="margin-top: 0px;">Tasks improved</h4>
+					<h4 style="margin-top: 0px;">Scénarios de tâches mis à l’essai et améliorés</h4>
 
 						<div>
 
 						<ul class="custul">
-						<li class="custli">Imagine you are going to start a home business in Winnipeg, part-time as a consultant. Find out what you can find out about any essential legal steps in that process</li>
-						<li class="custli">You want to name your new business ‘SOMOS’. Check if it is legal or illegal for you to start using that name</li>
-						<li class="custli">You expect to earn about $1,000 a month from your new business for the first six months. Find out whether you must charge GST to your customers</li>
-						<li class="custli">Your first employee starts work next month. Find out if there is an official step you must take before or very soon after you cut their first paycheque</li>
-						<li class="custli">Your business needs to start collecting GST. Find the official first step you must take</li>
-						<li class="custli">You have decided to incorporate your business. Is it possible to submit the application form online, and if so, how much it will cost?</li>
+						<li class="custli">Imaginez que vous allez démarrer une entreprise à domicile à Winnipeg, à temps partiel, à titre de consultant. Renseignez-vous sur les étapes juridiques essentielles de ce processus. </li>
+						<li class="custli">Vous voulez nommer votre entreprise « SOMOS ». Vérifiez s’il est légal ou illégal pour vous de commencer à utiliser ce nom.</li>
+						<li class="custli">Vous pensez gagner environ 1 000 $ par mois de votre nouvelle entreprise pendant les six premiers mois. Vérifiez si vous devez facturer la <abbr title="taxe sur les produits et services">TPS</abbr> à vos clients.</li>
+						<li class="custli">Votre premier employé commence à travailler le mois prochain. Vérifiez si vous devez appliquer une mesure officielle avant ou peu après avoir émis son premier chèque de paye.</li>
+						<li class="custli">Votre entreprise doit commencer à percevoir la TPS. Vérifier quelle est la première mesure officielle que vous devez appliquer. </li>
+						<li class="custli">Vous avez décidé de constituer votre entreprise en société. Est-il possible de présenter le formulaire de demande en ligne et, le cas échéant, combien cela coûtera-t-il? </li>
 						</ul>
 
 						<br>
@@ -182,17 +182,17 @@
 									</table>
 
 
-				<h4 style="margin-top: 0px;">Tasks improved</h4>
+				<h4 style="margin-top: 0px;">Scénarios de tâches mis à l’essai et améliorés</h4>
 
 												<div>
 
 												<ul class="custul">
-												<li class="custli">Find out what I need to come to Canada as a tourist from my country</li>
-												<li class="custli">Find out what I need to come to Canada as a Canadian permanent resident</li>
-												<li class="custli">Find out what I need to come to Canada as a former Canadian permanent resident</li>
-												<li class="custli">Find out what I need to come to Canada as a Canadian dual citizen</li>
-												<li class="custli">Find out what I need to come to Canada from the USA with an American passport</li>
-												<li class="custli">Find out what I need to transit through a Canadian airport coming from China?</li>
+												<li class="custli">Déterminer ce dont j’ai besoin pour venir au Canada en tant que touriste de mon pays.</li>
+												<li class="custli">Déterminer ce dont j’ai besoin pour venir au Canada en tant que résident permanent canadien.</li>
+												<li class="custli">Déterminer ce dont j’ai besoin pour venir au Canada en tant qu’ancien résident permanent canadien.</li>
+												<li class="custli">Déterminer ce dont j’ai besoin pour venir au Canada en tant que citoyen canadien ayant la double citoyenneté.</li>
+												<li class="custli">Déterminer ce dont j’ai besoin pour venir au Canada en provenance des États-Unis avec un passeport américain.</li>
+												<li class="custli">Déterminer ce dont j’ai besoin pour transiter par un aéroport canadien en provenance de la Chine.</li>
 												</ul>
 
 												<br>
@@ -246,7 +246,7 @@
 										</table>
 
 
-			<h4 style="margin-top: 0px;">Tasks improved</h4>
+			<h4 style="margin-top: 0px;">Scénarios de tâches mis à l’essai et améliorés</h4>
 
 
 														<div>
@@ -319,7 +319,7 @@
 															  </table>
 
 
-					<h4 style="margin-top: 0px;">Tasks improved</h4>
+					<h4 style="margin-top: 0px;">Scénarios de tâches mis à l’essai et améliorés</h4>
 
 																<div>
 
@@ -383,17 +383,17 @@
 																						</tr></tbody></table>
 
 
-						<h4 style="margin-top: 0px;">Tasks improved</h4>
+						<h4 style="margin-top: 0px;">Scénarios de tâches mis à l’essai et améliorés</h4>
 
 																						<div>
 
 																	<ul class="custul">
 																	<li class="custli">Pouvez-vous payer les retenues sur la paie de votre compagnie (y compris les retenues pour le Régime de pensions du Canada et les retenues des Assurances-Emploi) par Interac?</li>
-																	<li class="custli">Vous avez émis une facture pour vos services, incluant la TPS, le jour avant de faire votre déclaration. Pouvez-vous attendre que la facture soit payée avant d'envoyer votre paiement?</li>
+																	<li class="custli">Vous avez émis une facture pour vos services, incluant la <abbr title="taxe sur les produits et services">TPS</abbr>, le jour avant de faire votre déclaration. Pouvez-vous attendre que la facture soit payée avant d'envoyer votre paiement?</li>
 																	<li class="custli">Par accident, vous avez fait une erreur en soumettant votre dernière déclaration de retenus sur la paie. Vous avez sous-payé vos retenus à la source par $350. Recevrez-vous une amende?</li>
-																	<li class="custli">Si votre compagnie en Ontario vend et livre un produit taxable à un client en Alberta, facturez-vous la TPS, la TVP, ou les deux (i.e. TVH)?</li>
+																	<li class="custli">Si votre compagnie en Ontario vend et livre un produit taxable à un client en Alberta, facturez-vous la <abbr title="taxe sur les produits et services">TPS</abbr>, ou la <abbr title="taxe de vente harmonisée">TVH</abbr>?</li>
 																	<li class="custli">Vous avez envoyé un chèque par la poste pour payer les retenues sur la paie de votre compagnie. Comment pourriez-vous confirmer que Revenu Canada l'a reçu?</li>
-																	<li class="custli">Vous vous êtes inscrits à la TPS pour la première fois le 31 août, et vous ferez votre déclaration à chaque année. Votre fin d'année financière est terminé le 31 octobre. De ce lapse de temps, votre taxe nette était $2500. Pour la prochaine année financière, devez-vous payer la TPS en versements par acomptes provisionnels?</li>
+																	<li class="custli">Vous vous êtes inscrits à la <abbr title="taxe sur les produits et services">TPS</abbr> pour la première fois le 31 août, et vous ferez votre déclaration à chaque année. Votre fin d'année financière est terminé le 31 octobre. De ce lapse de temps, votre taxe nette était $2500. Pour la prochaine année financière, devez-vous payer la <abbr title="taxe sur les produits et services">TPS</abbr> en versements par acomptes provisionnels?</li>
 																	<li class="custli">Vous avez une entreprise saisonnière, et donc vous ne payez pas vos employés durant l'hiver. Devez-vous informer Revenu Canada de ce détail?</li>
 																						</ul>
 
@@ -441,12 +441,12 @@
 																												</tr></tbody></table>
 
 
-							<h4 style="margin-top: 0px;">Tasks improved</h4>
+							<h4 style="margin-top: 0px;">Scénarios de tâches mis à l’essai et améliorés</h4>
 
 																												<div>
 
 																		<ul class="custul">
-																				<li class="custli">Darren travaille à temps plein et fait ses cotisations d'AE depuis 5 mois. Est-ce suffisant pour qu'il soit admissible pour un support gouvernemental, afin qu'il puisse absenter du travail et prendre soin de son fils malade de 8 ans?</li>
+																				<li class="custli">Darren travaille à temps plein et fait ses cotisations d'<abbr title="Assurance-Emploi">AE</abbr> depuis 5 mois. Est-ce suffisant pour qu'il soit admissible pour un support gouvernemental, afin qu'il puisse absenter du travail et prendre soin de son fils malade de 8 ans?</li>
 																				<li class="custli">Quelle information Chen aura-t-il besoin de son employeur pour appuyer une demande pour lui permettre de s'absenter du travail pour prendre soin de sa femme malade?</li>
 																				<li class="custli">Tara a déposé une demande pour un support gouvernemental afin qu'elle puisse s'absenter du travail pour prendre soin de sa fille malade de 12 ans. Quand recevra-t-elle son premier paiement?</li>
 																				<li class="custli">Pouvez-vous me montrer comment vous présenteriez une demande pour de l'aide du gouvernement pour que vous puissiez vous absenter du travail afin de prendre soin d'un parent malade?</li>
