--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -199,7 +199,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 												<li class="custli">Find out what I need to come to Canada as a Canadian permanent resident.</li>
 												<li class="custli">Find out what I need to come to Canada as a former Canadian permanent resident.</li>
 												<li class="custli">Find out what I need to come to Canada as a Canadian dual citizen.</li>
-												<li class="custli">Find out what I need to come to Canada from the USA with an American passport.</li>
+												<li class="custli">Find out what I need to come to Canada from the <abbr title="United States of America">USA</abbr with an American passport.</li>
 												<li class="custli">Find out what I need to transit through a Canadian airport coming from China?</li>
 												</ul>
 
