--- a/pages/apercu-projet.html
+++ b/pages/apercu-projet.html
@@ -135,7 +135,7 @@
 						<li class="custli">Vous voulez nommer votre entreprise « SOMOS ». Vérifiez s’il est légal ou illégal pour vous de commencer à utiliser ce nom.</li>
 						<li class="custli">Vous pensez gagner environ 1 000 $ par mois de votre nouvelle entreprise pendant les six premiers mois. Vérifiez si vous devez facturer la <abbr title="taxe sur les produits et services">TPS</abbr> à vos clients.</li>
 						<li class="custli">Votre premier employé commence à travailler le mois prochain. Vérifiez si vous devez appliquer une mesure officielle avant ou peu après avoir émis son premier chèque de paye.</li>
-						<li class="custli">Votre entreprise doit commencer à percevoir la TPS. Vérifier quelle est la première mesure officielle que vous devez appliquer. </li>
+						<li class="custli">Votre entreprise doit commencer à percevoir la <abbr title="taxe sur les produits et services">TPS</abbr>. Vérifier quelle est la première mesure officielle que vous devez appliquer. </li>
 						<li class="custli">Vous avez décidé de constituer votre entreprise en société. Est-il possible de présenter le formulaire de demande en ligne et, le cas échéant, combien cela coûtera-t-il? </li>
 						</ul>
 
