--- a/pages/apercu-projet.html
+++ b/pages/apercu-projet.html
@@ -224,7 +224,7 @@
 			<h4>Pourquoi ces tâches sont-elles importantes?</h4>
 
 						<ul>
-				<li class="custli">Les Canadiens vérifient la météo auprès du GC plus que n’importe quoi d’autre</li>
+				<li class="custli">Les Canadiens vérifient la météo auprès du gouvernement du Canada plus que n’importe quoi d’autre</li>
 				<li class="custli">Plus de 550 000 000 de visites annuelles sur le site meteo.gc.ca</li>
 				</ul>
 			<br>
@@ -358,13 +358,13 @@
 
 		<h4>Objectif</h4>
 
-			<p>Faire en sorte qu’il soit plus facile pour les entreprises de respecter les exigences en matière de TPS/TVH et de retenues sur la paye.</p>
+			<p>Faire en sorte qu’il soit plus facile pour les entreprises de respecter les exigences en matière de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> et de retenues sur la paye.</p>
 
 
 			<h4>Pourquoi ces tâches sont-elles importantes?</h4>
 
 						<ul>
-				<li class="custli">Il y a 5 400 000 comptes de TPS/TVH actifs et 1 700 000 comptes de retenues sur la paie actifs au Canada</li>
+				<li class="custli">Il y a 5 400 000 comptes de <abbr title="taxe sur les produits et services/taxe de vente harmonisée">TPS/TVH</abbr> actifs et 1 700 000 comptes de retenues sur la paie actifs au Canada</li>
 				</ul>
 			<br>
 
