--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ lang: en
 
 <div class="home">
 
-  <h1 class="page-heading">Newest articles</h1>
+  <h2 class="">Newest articles</h1>
 
    <div class="wb-eqht"> 
   {% assign posts=site.posts | where:"lang", page.lang %}
