--- a/accueil.html
+++ b/accueil.html
@@ -5,7 +5,7 @@ lang: fr
 ---
 <div class="home">
 
-  <h1 class="page-heading">Nouveaux articles</h1>
+  <h2 class="">Nouveaux articles</h1>
  <div class="wb-eqht"> 
  {% assign posts=site.posts | where:"lang", page.lang %}
     {% for post in posts %}
