Revised text from Laura

--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -59,8 +59,6 @@
 <link rel="stylesheet" href="../css/blog.css">
 
 
-
-
 <main role="main" property="mainContentOfPage" class="container">
 
 <h1>Improving content on Canada.ca</h1>
@@ -70,11 +68,9 @@
 	<p>
 Sometimes the words we use, and how we organize them, can make it hard for people to find and understand Government of Canada information and services on Canada.ca. The <abbr title="Treasury Board of Canada Secretariat">TBS</abbr> Digital Transformation Office is working on projects with federal departments to make it easier.</p>
 
-<p>To ensure Canada.ca content is improving with each project, we co-create prototypes, set concrete usability targets, and run usability tests with Canadians to see if the prototypes result in an improvement or not. </p>
+<p>For each project, we co-create prototypes, set concrete usability targets, and run usability tests with Canadians. We ask questions Canadians have about specific Government of Canada services. For a prototype to launch, it must make it at least 20% easier for people to get the right answer.</p>
 
-<p>For a prototype to launch, it has to show that it is at least 20% easier for Canadians to accomplish the task of getting the right answers to questions they are likely to have about specific Government of Canada services. </p>
-
-<p>Considering the high numbers of page visits to some the Government of Canada’s Top Tasks, such an increase in task success rates is significant. Ultimately it means people spending less time looking for the answers they need from the Government of Canada.</p>
+<p>Considering the high numbers of visits to in-demand pages, such an increase in task success rates is significant. Ultimately it means people spend less time looking for the answers they need from the Government of Canada.</p>
 
 
 
