Gil and Peter's changes

--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -152,7 +152,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 							</details>
 
 <details>
-						<summary class="borderless">  <h3 class="timeline-title">Electronic Travel Authorizations (ETA)</h3> <div class="summary-custom"><div></summary>
+						<summary class="borderless">  <h3 class="timeline-title">Travel documents</h3> <div class="summary-custom"><div></summary>
 
 			<h4>Partner department</h4>
 
@@ -288,7 +288,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 
 <details >
-					<summary class="borderless">  <h3 class="timeline-title">Vaccination and immunization information</h3> <div class="summary-custom"><div></summary>
+					<summary class="borderless">  <h3 class="timeline-title">Disease and immunization information</h3> <div class="summary-custom"><div></summary>
 
 			<h4>Partner departments</h4>
 
