hide all - this is messing up the live site

--- a/index_drafts.html
+++ b/index_drafts.html
@@ -3,7 +3,7 @@ layout: blog
 ref: index
 lang: en
 ---
-
+<!--
 
 <div class="home">
 
@@ -36,7 +36,7 @@ lang: en
 </div>
 </div>
 
-<p>Date modified: April 27, 2018</p>
+<p>Date modified: April 27, 2018</p> -->
 
 
 
