--- a/accueil.html
+++ b/accueil.html
@@ -9,6 +9,7 @@ lang: fr
  <div class="wb-eqht"> 
  {% assign posts=site.posts | where:"lang", page.lang %}
     {% for post in posts %}
+    {% unless post.draft %}
 	
 
 <section class="col-md-6">
