trying to fix build error

--- a/accueil.html
+++ b/accueil.html
@@ -8,6 +8,8 @@ lang: fr
   <h2 class="">Nouveaux articles</h1>
    <div class="wb-eqht">
   {% assign posts=site.posts | where:"lang", page.lang %}
+    {% for post in posts %}
+	   {% unless post.draft %}
 
 <section class="col-md-6">
 
@@ -15,7 +17,7 @@ lang: fr
 		<p>{{ post.description }} - <small>[{{ post.date | date: "%F" }}]</small> </p>
 
 </section>
-
+  {% endunless %}
   {% endfor %}
 
 	</div>
