--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -37,7 +37,7 @@
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
 					lang: "fr",
-					href: "apercu-projet.html",
+					href: "maladies-resume-researche.html",
 					text: "Français"
 				}],
 				breadcrumbs: [{
